--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,24 +1,30 @@
 {
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
-    "version": "0.1.0",
+    "version": "2.0.0",
     "command": "dotnet",
-    "isShellCommand": true,
     "args": [],
     "tasks": [
         {
-            "taskName": "build",
-            "args": [ ],
-            "isBuildCommand": true,
-            "showOutput": "silent",
-            "problemMatcher": "$msCompile"
+            "label": "build",
+            "type": "shell",
+            "command": "dotnet",
+            "args": [
+                "build"
+            ],
+            "problemMatcher": "$msCompile",
+            "group": "build"
         },
         {
-            "taskName": "test",
-            "args": [ "tests/Hekate.Tests/Hekate.Tests.fsproj" ],
-            "isTestCommand": true,
-            "showOutput": "silent",
-            "problemMatcher": "$msCompile"
+            "label": "test",
+            "type": "shell",
+            "command": "dotnet",
+            "args": [
+                "test",
+                "tests/Hekate.Tests/Hekate.Tests.fsproj"
+            ],
+            "problemMatcher": "$msCompile",
+            "group": "test"
         }
     ]
 }
